--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,9 +4,9 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
-  color-scheme: light;
+  color-scheme: dark;
   --radius: 0.625rem;
-  --background: oklch(1 0 0);
+  --background: oklch(23.103% 0.00623 17.382);
   --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
